--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <head>
   <title>Firebase Login</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="style2.css" />
+  <link rel="stylesheet" href="login_style.css" />
 </head>
 <body>
 
@@ -19,8 +19,6 @@
     <p id="user_para">Welcome to Firebase web login Example. You're currently logged in.</p>
     <button onclick="logout()">Logout</button>
   </div>
-
-
 
   <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
 <script>
