--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
  };
  firebase.initializeApp(config);
 </script>
-  <script src="login2.js"></script>
+  <script src="temp.js"></script>
 
 </body>
 </html>
