--- a/tables.html
+++ b/tables.html
@@ -276,9 +276,41 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-2 text-gray-800">Pedometer</h1>
-          <p class="mb-4">Tracked from your mobile device!</p>
+          <p class="mb-4">Steps tracked from your mobile device!</p>
 
           <!-- DataTales Example -->
+
+           <!-- Content Row -->
+           <div class="row">
+
+            <!-- Content Column -->
+            <div class="col-lg-6 mb-4">
+
+              <!-- Project Card Example -->
+              <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-primary">Goals</h6>
+                </div>
+                <div class="card-body">
+                  <h4 class="small font-weight-bold"> Today <span class="float-right">2000/10,000</span></h4>
+                  <div class="progress mb-4">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <h4 class="small font-weight-bold"> This Week <span class="float-right">4000/30,000</span></h4>
+                  <div class="progress mb-4">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ></div>
+                  </div>
+                  <h4 class="small font-weight-bold"> This Month <span class="float-right">6000/50,000</span></h4>
+                  <div class="progress mb-4">
+                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ></div>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+
+            <div class="col-lg-6 mb-4">
           
 
         </div>
