--- a/tables.html
+++ b/tables.html
@@ -47,13 +47,13 @@
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="blank.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Health Feed</span></a>
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="blank 2.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Your Timeline</span></a>
       </li>
