--- a/tables.html
+++ b/tables.html
@@ -33,7 +33,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">Fit to Friend</div>
+        <div class="sidebar-brand-text mx-3">comFITition</div>
       </a>
 
       <!-- Divider -->
@@ -57,6 +57,12 @@
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Your Timeline</span></a>
       </li>
+
+      <li class="nav-item active">
+          <a class="nav-link" href="blank 2 copy.html">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Your Timeline</span></a>
+        </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider">
