--- a/blank 2 copy.html
+++ b/blank 2 copy.html
@@ -378,6 +378,7 @@
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
+  <script src="js/testing.js"></script>
 
 </body>
 
