Update blank 2 copy.html

--- a/blank 2 copy.html
+++ b/blank 2 copy.html
@@ -52,11 +52,13 @@
           <span>Health Feed</span></a>
       </li>
 
+   
+
       <li class="nav-item active">
-        <a class="nav-link" href="blank 2.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Your Timeline</span></a>
-      </li>
+          <a class="nav-link" href="blank 2 copy.html">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Friends Leaderboard</span></a>
+        </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider">
@@ -378,7 +380,6 @@
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
-  <script src="js/testing.js"></script>
 
 </body>
 
