--- a/tables.html
+++ b/tables.html
@@ -52,16 +52,12 @@
           <span>Health Feed</span></a>
       </li>
 
-      <li class="nav-item active">
-        <a class="nav-link" href="blank 2.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Your Timeline</span></a>
-      </li>
+ 
 
       <li class="nav-item active">
           <a class="nav-link" href="blank 2 copy.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Your Timeline</span></a>
+            <span>Friends Leaderboard</span></a>
         </li>
 
       <!-- Divider -->
