--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>comFITition</title>
+  <title>SB Admin 2 - Dashboard</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -52,16 +52,11 @@
           <span>Health Feed</span></a>
       </li>
 
-      <li class="nav-item active">
-        <a class="nav-link" href="blank 2.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Your Timeline</span></a>
-      </li>
 
       <li class="nav-item active">
           <a class="nav-link" href="blank 2 copy.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Your Timeline</span></a>
+            <span>Friends Leaderboard</span></a>
         </li>
 
       <!-- Divider -->
