--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <li class="nav-item active">
           <a class="nav-link" href="blank 2 copy.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Friends Leaderboard</span></a>
+            <span>Meal Tracker</span></a>
         </li>
 
       <!-- Divider -->
